  be readable and writable by any future 9.x and 10.x Lucene releases.
  But note that int8 compression was buggy and can no longer be
  written but can be read from an existing index.  (Ionut
  Anghelcovici, Michael McCandless)

* GITHUB#13841: Improve Tessellatorlogic when two holes share the same vertex with the polygon which was failing
  in valid polygons. (Ignacio Vera)


======================== Lucene 9.12.0 =======================

Security Fixes
---------------------

* Deserialization of Untrusted Data vulnerability in Apache Lucene Replicator - CVE-2024-45772
 (Summ3r from Vidar-Team, Robert Muir, Paul Irwin)

API Changes
---------------------

* GITHUB#13806: Add TermInSetQuery#getBytesRefIterator to be able to iterate over query terms. (Christoph Büscher)

* GITHUB#13469: Expose FlatVectorsFormat as a first-class format; can be configured using a custom Codec. (Michael Sokolov)

* GITHUB#13612: Hunspell: add Suggester#proceedPastRep to avoid losing relevant suggestions. (Peter Gromov)

* GITHUB#13603: Introduced `IndexSearcher#searchLeaf(LeafReaderContext, Weight, Collector)` protected method to
  facilitate customizing per-leaf behavior of search without requiring to override
  `search(LeafReaderContext[], Weight, Collector)` which requires overriding the entire loop across the leaves (Luca Cavanna)

* GITHUB#13559: Add BitSet#nextSetBit(int, int) to get the index of the first set bit in range. (Egor Potemkin)

* GITHUB#13568: Add DoubleValuesSource#toSortableLongDoubleValuesSource and
  MultiDoubleValuesSource#toSortableMultiLongValuesSource methods. (Shradha Shankar)

* GITHUB#13568, GITHUB#13750: Add DrillSideways#search method that supports any CollectorManagers for drill-sideways dimensions
  or drill-down. (Egor Potemkin)

* GITHUB#13737: Deprecate the FacetsCollector#search utility methods and add new corresponding method to
  FacetsCollectorManager that accept a FacetsCollectorManager as last argument in place of a Collector. (Luca Cavanna)
