@@ -23,6 +23,10 @@ Bug Fixes
 * GITHUB#13841: Improve Tessellatorlogic when two holes share the same vertex with the polygon which was failing
   in valid polygons. (Ignacio Vera)
 
+* GITHUB#13986: Allow easier configuration of the Panama Vectorization provider with
+  newer Java versions. Set the `org.apache.lucene.vectorization.upperJavaFeatureVersion`
+  system property to increase the set of Java versions that Panama Vectorization will
+  provide optimized implementations for. (Chris Hegarty)
 
 ======================== Lucene 9.12.0 =======================
 
